[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/UnstompablePatrollingGroundEnemy.gd" type="Script" id=1]
[ext_resource path="res://Scenes/BaseEnemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/AttackHitCheck.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/unstompable.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="UnstompablePatrollingGroundEnemy" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 4 )

[node name="AttackHitCheck" parent="." index="3" instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitCheck" index="0"]
shape = SubResource( 1 )

[node name="RightGroundCheck" type="RayCast2D" parent="." index="4"]
position = Vector2( 8, 8 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 4

[node name="LeftGroundCheck" type="RayCast2D" parent="." index="5"]
position = Vector2( -8, 8 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 4

[connection signal="hit" from="AttackHitCheck" to="." method="_on_AttackHitCheck_hit"]
